src/test/deca/context/valid/homemade/test/test317_affectation_void.deca
// test valide de la règle 3.17


{
    int a;
    float b;
    boolean c;
}